[project]
name = "broker2db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "argparse>=1.4.0",
    "bytewax[kafka]>=0.21.1",
    "orjson>=3.10.18",
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel.sources]
sources = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/broker2db"]
